--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "license": "MIT",
   "scripts": {
-    "start": "node server.js",
-    "postinstall": "puppeteer install"
+    "prestart": "puppeteer install",
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
