--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "extract-hls",
   "version": "1.0.0",
-  "description": "Extrator automático de links m3u8 com token usando Puppeteer",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
+    "@sparticuz/chromium": "^125.0.0",
     "express": "^4.18.2",
-    "puppeteer": "^22.8.2"
+    "puppeteer-core": "^22.8.2"
   }
 }
