--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "@sparticuz/chromium": "^125.0.0",
     "express": "^4.18.2",
-    "puppeteer-core": "^22.8.2"
+    "puppeteer-core": "^22.8.2",
+    "@sparticuz/chromium": "^125.0.0"
   }
 }
