--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "extract-hls",
   "version": "1.0.0",
+  "description": "Extrator de master.m3u8 via Puppeteer e interceptação de segmentos TS",
   "main": "server.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
+    "@sparticuz/chromium": "^112.0.0",
     "express": "^4.18.2",
-    "puppeteer-core": "^22.8.2",
-    "@sparticuz/chromium": "^125.0.0"
+    "puppeteer-core": "^22.6.3"
   }
 }
