--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "scripts": {
     "start": "node server.js"
   },
+  "author": "Seu Nome",
+  "license": "MIT",
   "dependencies": {
     "@sparticuz/chromium": "^112.0.0",
     "express": "^4.18.2",
