--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
   "name": "extract-hls",
   "version": "1.0.0",
-  "description": "Extrator de master.m3u8 via interceptação de segmentos .ts",
   "main": "server.js",
-  "type": "commonjs",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "@sparticuz/chromium": "^112.0.0",
     "express": "^4.18.2",
-    "puppeteer-core": "^22.6.3"
+    "puppeteer": "^21.3.8"
   }
 }
