--- a/package.json
+++ b/package.json
@@ -1,18 +1,14 @@
 {
   "name": "extract-hls",
   "version": "1.0.0",
-  "description": "Extrator automático de links m3u8 com token usando Puppeteer",
+  "description": "Extrator de .m3u8 usando puppeteer-core e Chromium do Render",
   "main": "server.js",
   "license": "MIT",
   "scripts": {
-    "start": "node server.js",
-    "postinstall": "puppeteer install"
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "puppeteer": "^22.8.2"
-  },
-  "puppeteer": {
-    "default_browser_revision": "127674"
+    "puppeteer-core": "^22.8.2"
   }
 }
