--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "extract-hls",
   "version": "1.0.0",
-  "description": "Extrator de .m3u8 usando puppeteer-core e Chromium do Render",
+  "description": "Extrator automático de .m3u8 com Puppeteer para Render",
   "main": "server.js",
   "license": "MIT",
   "scripts": {
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "puppeteer-core": "^22.8.2"
+    "puppeteer-core": "^22.8.2",
+    "@sparticuz/chromium": "^112.0.0"
   }
 }
