--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
   "name": "extract-hls",
   "version": "1.0.0",
-  "description": "Extrator automático de .m3u8 com Puppeteer para Render",
   "main": "server.js",
-  "license": "MIT",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "puppeteer-core": "^22.8.2",
-    "@sparticuz/chromium": "^112.0.0"
+    "puppeteer": "^21.3.8"
   }
 }
