--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "extract-hls",
   "version": "1.0.0",
-  "description": "Extrator automático de links m3u8 com token usando Puppeteer",
+  "description": "Extrator de master.m3u8 local com Puppeteer",
   "main": "server.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "puppeteer": "^22.8.2"
+    "puppeteer": "^22.15.0"
   }
 }
