--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "puppeteer": "^22.15.0"
   }
