--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "puppeteer": "^22.15.0"
+  "@sparticuz/chromium": "^112.0.0",
+  "cors": "^2.8.5",
+  "express": "^4.18.2",
+  "puppeteer-core": "^22.6.3"
   }
 }
