--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "extract-hls",
   "version": "1.0.0",
+  "description": "API Puppeteer + Proxy para extrair links HLS e servir conteúdo com proxy",
   "main": "server.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "puppeteer": "^22.1.1",
+    "axios": "^1.4.0",
     "cors": "^2.8.5",
-    "got": "^12.6.0"
+    "express": "^4.18.2",
+    "puppeteer": "^22.4.0"
   }
 }
