--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "got": "^13.0.0",
-    "puppeteer": "^22.6.3"
+    "puppeteer": "^22.6.3",
+    "helmet": "^7.0.0",
+    "express-rate-limit": "^7.0.0",
+    "express-timeout-handler": "^1.1.4"
   }
 }
