--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
   "scripts": {
     "start": "node server.js"
   },
+  "engines": {
+    "node": "20.x"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "got": "^13.0.0",
-    "puppeteer": "^22.6.3",
-    "helmet": "^7.0.0",
-    "express-rate-limit": "^7.0.0",
-    "express-timeout-handler": "^1.1.4"
+    "puppeteer": "^22.6.3"
+    "helmet": "^6.0.1",
+    "express-rate-limit": "^6.7.0"
   }
 }
