--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "got": "^13.0.0",
-    "puppeteer": "^22.6.3"
+    "puppeteer": "^22.6.3",
     "helmet": "^6.0.1",
     "express-rate-limit": "^6.7.0"
   }
