--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "node": "20.x"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "got": "^13.0.0",
-    "puppeteer": "^22.6.3",
-    "helmet": "^6.0.1",
-    "express-rate-limit": "^6.7.0"
-  }
+  "compression": "^1.7.4",
+  "cors": "^2.8.5",
+  "express": "^4.18.2",
+  "express-rate-limit": "^7.0.0",
+  "express-timeout-handler": "^1.1.4",
+  "got": "^13.0.0",
+  "helmet": "^7.0.0",
+  "puppeteer": "^22.6.3"
+}
 }
