--- a/.nixpacks.toml
+++ b/.nixpacks.toml
@@ -1,7 +1,15 @@
 [tool.nixpacks]
+providers = ["node"]
+
+[tool.nixpacks.build]
+cmds = ["npm install"]
+
+[tool.nixpacks.start]
+cmd = "npm start"
 
 [tool.nixpacks.phases.setup]
-packages = ["ffmpeg"]  # se mais pacotes forem necessários, adicione aqui
+packages = ["ffmpeg", "chromium"]
 
 [tool.nixpacks.env]
 NODE_VERSION = "20.x"
+PUPPETEER_EXECUTABLE_PATH = "/usr/bin/chromium-browser"
