--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "express-rate-limit": "^7.0.0",
   "got": "^13.0.0",
   "helmet": "^7.0.0",
+  "express-basic-auth": "^1.2.0",
   "puppeteer": "^22.6.3"
 }
 }
